# Canvas

./: CMakeLists.txt  README.md  William Sander Final Project Proposal.txt  run_canvas.sh  setup.sh  test_debug.sh  test_ui.sh
filters/: blur.py  edge_detection.py  sharpen.py
include/commands/: Command.h  CommandHistory.h  DrawCommand.h  LayerCommand.h  SnapshotCommand.h
include/core/: Application.h  Canvas.h  Color.h  DrawingUtils.h  LayerCompositor.h
include/filters/: FilterManager.h
include/io/: FileManager.h  ImageHandler.h
include/layers/: Layer.h  LayerManager.h
include/rendering/: Renderer.h  Texture.h
include/tools/: CircleTool.h  EraserTool.h  FillTool.h  LineTool.h  PencilTool.h  RectangleTool.h  SprayTool.h  Tool.h  ToolManager.h
include/ui/: BrushSizeSlider.h  ColorPicker.h  FilterMenu.h  LayerPanel.h  ToolPanel.h  UIManager.h
src/: main.cpp
src/commands/: CommandHistory.cpp  DrawCommand.cpp  LayerCommand.cpp  SnapshotCommand.cpp
src/core/: Application.cpp  Canvas.cpp  Color.cpp  DrawingUtils.cpp  LayerCompositor.cpp
src/filters/: FilterManager.cpp
src/io/: FileManager.cpp  ImageHandler.cpp
src/layers/: Layer.cpp  LayerManager.cpp
src/rendering/: Renderer.cpp  Texture.cpp
src/tools/: CircleTool.cpp  EraserTool.cpp  FillTool.cpp  LineTool.cpp  PencilTool.cpp  RectangleTool.cpp  SprayTool.cpp  ToolManager.cpp
src/ui/: BrushSizeSlider.cpp  ColorPicker.cpp  FilterMenu.cpp  LayerPanel.cpp  ToolPanel.cpp  UIManager.cpp
